Test parcel store data in swagger and edit
